Align Spark stack to Java 26.0.1
Java 24+ removed the SecurityManager / Subject.getSubject path that
Spark 3.5.x's Hadoop 3.3 libraries depended on, surfacing as
``java.lang.UnsupportedOperationException: getSubject is not supported``
during SparkContext init. Spark 4.0 ships with Hadoop 3.4, which fixed
the call site.

Changes
-------
* `requirements.txt`: pyspark 3.5.1 -> 4.0.0, delta-spark 3.2.0 -> 4.0.0
  (must match Spark major). Removed the `kafka-python` line — the only
  Kafka client we use now is `confluent-kafka` and the orphan was
  causing confusion.
* `configs/app.yaml`: Kafka SQL connector coords bumped to Spark 4 /
  Scala 2.13 (`org.apache.spark:spark-sql-kafka-0-10_2.13:4.0.0`,
  `io.delta:delta-spark_2.13:4.0.0`). Spark 4 dropped Scala 2.12 — old
  jars no longer resolve.
* `utils/spark.py`: inject the standard `--add-opens` flag set Spark
  documents for Java 17+. Same set works on Java 21 / 25 / 26. Applied
  via `JAVA_TOOL_OPTIONS` (idempotently) plus
  `spark.driver.extraJavaOptions` and `spark.executor.extraJavaOptions`
  on the SparkSession config — covers local + cluster mode.
* `README.md`: refreshed prerequisites table to call out Java 26.0.1
  explicitly, plus updated the quickstart to use the current pipeline
  entry points (csv_to_kafka, ingest_employee_stream,
  build_silver_employees, build_employee_gold).
* `silver/build_silver_employees.py`: docstring no longer claims Java
  11/17 — Java 26 works the moment `utils.spark.build_spark` runs.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>